# AI-DATA-CLEAN-

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  SETUP.md  analysis_notebook.ipynb  docker-compose.yml  fix_delay.py  package-lock.json  proposal_text.txt  pyproject.toml  requirements.txt  run_cleaning.py  run_model.py  start-full.bat
AI_Project/: README.md
AI_Project/AI_Project/: dirty_transport_dataset.csv  requirements.txt
AI_Project/AI_Project/docs/: change_log.html  change_log.md  exec_summary.html  final_report.html  final_report.md  print.css
AI_Project/AI_Project/notebooks/: EDA_Outlier_Analysis.ipynb  NooteBook.ipynb
AI_Project/AI_Project/results/: cleaned_data_view.txt  cleaned_transport_data.csv  engineered_data_view.txt  engineered_transport_data.csv  model_LinearRegression.pkl  model_RandomForest.pkl  model_explainability_report.html  model_performance_comparison.csv
AI_Project/AI_Project/scripts/: _write_test_file.py  clean_outputs.py  convert_report.py  convert_slides.py  export_change_log_html.py  export_data_view.py  export_report_html.py  extended_shap.py  html_to_exec_pdf.py  html_to_pdf_generic.py  html_to_pdf_pyppeteer.py  package_deliverables.py  rebuild_outputs.py  run_startup_cell.py
AI_Project/AI_Project/slides/: final_deck.md  final_deck.pptx  stakeholder_summary.md
AI_Project/AI_Project/tests/: conftest.py  test_data_cleaner.py  test_e2e_winsor.py  test_explainer_plot.py  test_feature_engineer.py  test_model_builder.py  test_model_explainer.py  (+4 more)
(+7 files in other folders)
